--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
+    "i18n-js": "^3.3.0",
+    "lodash.memoize": "^4.1.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^1.4.2",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-htmlview": "^0.16.0",
+    "react-native-localize": "^1.1.3",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
@@ -31,7 +35,6 @@
     "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-update-gradle": "^1.2.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
