--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "i18n-js": "^3.3.0",
     "lodash.memoize": "^4.1.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-app-intro-slider": "^4.0.4",
@@ -35,6 +39,7 @@
     "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
