--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-htmlview": "^0.16.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-localize": "^1.1.3",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
